readsb (3.8.4~dev) UNRELEASED; urgency=medium

  * In development

 -- Michael Wolf <michael@mictronics.de>  Sun, 03 May 2020 10:45:42 +0200

readsb (3.8.3) stable; urgency=medium

  * Add marker types for ground vehicles and towers.
  * Fix bug in handling bladeRF command line options.
  * Contribution wiedehopf:
    * Improvement of SBS decoding
    * Connection timed out: remove misleading explanation
    * keepalive: set and check for error in net_io.c instead of blindly doing it in anet.c
    * Add custom keepalive settings that will time out a broken connection after 30 seconds.
    * Move from global client list to one client list per service.
    * Fix anet open_fd limiting to include all used sockets.
    * Avoid excessive iteration over Modes.clients.
    * Move network cleanup to net_io.c and use closeClient.
    * Perform some network task less often.
    * Improved accept handling.

 -- Michael Wolf <michael@mictronics.de>  Sun, 03 May 2020 10:30:05 +0200

readsb (3.8.2) stable; urgency=medium

  * Webapp: History loading and trace collection moved to background worker.
  * Fix hidding SkyVector layers when no API key is present.
  * Fix latest stats, was always zero, is now momentary statistic.
  * Fix bug in overlay layer generation when language is not English.
  * Add DC-10 aircraft marker.
  * Disable source maps for third-party scripts.
  * Fix sporatic buffer overflow in JSON stats generation.
  * Zero initalize new network clients.
  * Prevent segmentation fault on invalid protocol name.

 -- Michael Wolf <michael@mictronics.de>  Sun, 01 Mar 2020 10:02:17 +0100

readsb (3.8.1) stable; urgency=medium

  * Load default web application settings from JSON file.
  * Introduce a dark theme.
  * Via dump1090:
    * Treat ADS-R as a separate source type.
    * Track ADS-B version separately for direct ADS-B, TIS-B, ADS-R.
    * Compute ADS-B v0 NACp/SIL from position message type
    * Correct block duration with PlutoSDR, fix issue #17.