@@ -90,7 +90,7 @@ static sdr_handler sdr_handlers[] = {
 #endif
 
     { beastInitConfig, beastHandleOption, beastOpen, noRun, noClose, "modesbeast", SDR_MODESBEAST, 0},
-    { beastInitConfig, beastHandleOption, beastOpen, noRun, noClose, "gns5894", SDR_GNS, 0},
+    { beastInitConfig, beastHandleOption, beastOpen, noRun, noClose, "gnshulc", SDR_GNS, 0},
     { ifileInitConfig, ifileHandleOption, ifileOpen, ifileRun, ifileClose, "ifile", SDR_IFILE, 0},
     { noInitConfig, noHandleOption, noOpen, noRun, noClose, "none", SDR_NONE, 0},
 
